manifests/base/deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "82107492a"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "82107492a"
  template:
    metadata:
      labels:
        app: "82107492a"
    spec:
      containers:
        - name: "82107492a" 
          image: cepgstapacr.azurecr.io/82107492a
          ports:
          - containerPort: 8080
